[package]
authors = ["Wim Looman <wim@nemo157.com>"]
description = "Display info about licensing of dependencies"
keywords = ["cargo", "licensing"]
license = "MIT/Apache-2.0"
name = "cargo-lichking"
readme = "README.md"
repository = "https://github.com/Nemo157/cargo-lichking"
version = "0.6.0"

[dependencies]
cargo = "0.24"
clap = "2.20"
regex = "0.2"
void = "1.0"

[dependencies.impl_sum]
git = "https://github.com/Nemo157/impl_sum"
optional = false
