[package]
name = "cargo-lichking"
version = "0.8.0"
authors = ["Wim Looman <wim@nemo157.com>"]

description = "Display info about licensing of dependencies"

repository = "https://github.com/Nemo157/cargo-lichking"

readme = "README.md"
keywords = ["cargo", "licensing"]

license = "MIT/Apache-2.0"

[dependencies]
cargo = "0.32"
clap = "2.20"
failure = "0.1.2"
regex = "1.0"
void = "1.0"
